<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="60dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@color/fcolorPrimary"
            android:theme="@style/GalaxyZooThemeToolbarDarkOverflow"
            app:titleTextColor="#ffffffff">

            <LinearLayout
                android:id="@+id/menu"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:gravity="center|start"
                android:padding="10dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:src="@drawable/back" />
            </LinearLayout>

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editMessage"
                android:textColor="#ffffffff"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/top">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/user_profileSide"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:background="#ffe5e5e5"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/message"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/msgedit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:textSize="18sp"
                        android:importantForAutofill="no" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_lastseen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="#ffe5e5e5"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/details"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="#ffffffff"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="40dp"
                        android:src="@drawable/online" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/author"
                        android:textColor="@color/black"
                        android:textSize="19sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="85dp"
                    android:background="@color/white"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:gravity="center_vertical">

                        <RadioGroup
                            android:id="@+id/senduser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp">

                            <RadioButton
                                android:id="@+id/me"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/my" />

                            <RadioButton
                                android:id="@+id/myfriend"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/myFriend" />
                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="#ffffffff"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="40dp"
                        android:src="@drawable/typing" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/deliveryStatus"
                        android:textColor="@color/black"
                        android:textSize="19sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical">

                        <RadioGroup
                            android:id="@+id/messagestatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp">

                            <RadioButton
                                android:id="@+id/send"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/send" />

                            <RadioButton
                                android:id="@+id/receive"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/receive" />

                            <RadioButton
                                android:id="@+id/read"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/readMessage" />
                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edit_usermessage"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="right"
                    android:paddingRight="20dp"
                    android:text="@string/save"
                    android:textColor="@color/fcolorPrimary"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/delete_usermessage"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toStartOf="@+id/edit_usermessage"
                    android:gravity="end"
                    android:paddingRight="30dp"
                    android:text="@string/delete"
                    android:textColor="#ffea1616"
                    android:textSize="23sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/admob"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >
                <com.startapp.android.publish.ads.banner.Banner
                    android:id="@+id/startAppBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>