<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_activity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/fragment_record"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/admob">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <EditText
                    android:id="@+id/inputText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1.0"
                    android:hint="@string/chatText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/setEmo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/to"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/emojeeTxt"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0.4"
                    android:hint="@string/emoji"
                    android:inputType="textShortMessage"
                    android:maxLength="2"
                    android:text=""
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/convertEmojeeBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:padding="10dp"
                    android:text="@string/transform" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editedTextlayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="60dp"
                android:gravity="end"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="45dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <EditText
                        android:id="@+id/convertedEmojeeTxt"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:background="#ffbbf1df"
                        android:inputType="textMultiLine"
                        android:lineSpacingExtra="4dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="40dp"
                        android:paddingTop="8dp"
                        android:scrollbars="vertical"
                        android:textSize="12sp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_bar_bottom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_margin="20dp"
                android:layout_marginBottom="160dp"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/copyTxtBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:drawableStart="@drawable/icons_copy"
                    android:text="@string/copy" />

                <Button
                    android:id="@+id/clearTxtBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:drawableStart="@drawable/icons_reset"
                    android:text="@string/clear" />

                <Button
                    android:id="@+id/shareTxtBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:drawableStart="@drawable/icons_share"
                    android:text="@string/share" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/admob"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">
            <com.startapp.android.publish.ads.banner.Banner
                android:id="@+id/startAppBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>