<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/admob">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scaleType="centerCrop"
                    android:src="@color/white" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="18dp">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/directChatInfo"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/directChatInfoNote"
                            android:textColor="@color/black" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/edtback"
                            android:gravity="start">

                            <EditText
                                android:id="@+id/msg"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:background="@drawable/background_edit_text"
                                android:gravity="start"
                                android:hint="@string/enterMessage"
                                android:inputType="textMultiLine" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <com.hbb20.CountryCodePicker
                                android:id="@+id/ccp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center" />

                            <EditText
                                android:id="@+id/input_text"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/background_edit_text"
                                android:hint="@string/enterNumber"
                                android:inputType="phone" />
                        </LinearLayout>

                        <androidx.cardview.widget.CardView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            app:cardCornerRadius="7dp"
                            app:cardElevation="3dp"
                            app:cardUseCompatPadding="true">

                            <RelativeLayout
                                android:id="@+id/go"
                                android:layout_width="fill_parent"
                                android:layout_height="50dp"
                                android:background="@color/colorPrimary">

                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="fill_parent"
                                    android:gravity="center"
                                    android:text="@string/sends"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/admob"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.startapp.android.publish.ads.banner.Banner
            android:id="@+id/startAppBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>